Many things (forget to commit) 🍙

--- a/views/information/activities.ejs
+++ b/views/information/activities.ejs
@@ -11,9 +11,8 @@
   </head>
   <body>
     <%- include('nav.ejs'); %>
+    <div style="height: 100px; background: black;"></div>
 
-    <div style="height: 86px; background:black;">
-    </div>
     <div class="container pt-4">
       <div class="row justify-content-center">
         <div class="col col-lg-9">
