--- a/views/information/registration.ejs
+++ b/views/information/registration.ejs
@@ -6,9 +6,8 @@
   </head>
   <body>
     <%- include('nav.ejs'); %>
+    <div style="height: 100px; background: black;"></div>
 
-    <div style="height: 86px; background:black;">
-    </div>
     <div class="container pt-4">
       <div class="row justify-content-center">
         <div class="col col-lg-9">
@@ -45,7 +44,7 @@
             <strong>Letter of Approval</strong><br/>
 
             A statement verifying your status as representatives from your medical school. You will need approval to confirm that your team is the official representative of your school. 
-            <a href="https://drive.google.com/file/d/1GnsxorMmmfJNVriA7mkPISpFP9zTrVLz/view" target="_blank">Download form</a>
+            <a href="https://drive.google.com/file/d/1GnsxorMmmfJNVriA7mkPISpFP9zTrVLz/view" target="_blank" onclick="gtag('event', 'views', ***REMOVED***event_category: 'PDF', event_label: 'Letter of Approval'});">Download form</a>
             <br><br>
             <i>The file should be uploaded in pdf or jpg format</i>
           </div>
@@ -77,10 +76,10 @@
             <strong>Team</strong>
             <br>
             Early period: Oct 01 - Oct 07, 2019
-            790 USD* or 26,500 THB* per team
+            790 USD* or 24,500 THB* per team
             <br>
             Regular period: Oct 08 - Oct 21, 2019
-            850 USD* or 24,500 THB* per team
+            850 USD* or 26,500 THB* per team
           </div>
 
           <div class="alert alert-info" role="alert">
@@ -110,10 +109,6 @@
           <div class="alert alert-info" role="alert">
             <strong>Team</strong>
             <br>
-
-            Application period:<br>
-            　　　Early period:      Oct 01 - Oct 07, 2019<br>
-            　　　Regular period:   Oct 08 - Oct 21, 2019<br>
             Announcement of qualified teams: Nov 25, 2019<br>
             Payment period and extra information submission: Nov 26 - Dec 24, 2019<br>
             Official announcement of competitors list: Dec 25, 2019<br>
