--- a/views/includes/body.ejs
+++ b/views/includes/body.ejs
@@ -15,19 +15,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha256-fTuUgtT7O2rqoImwjrhDgbXTKUwyxxujIMRIK7TbuNU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js" integrity="sha256-FnUP2HEr+LnsA4l1YflN3prVZISLwKs2FB7X9/fdPBE=" crossorigin="anonymous"></script>
-<script src="js/nivo-lightbox.js"></script>
+<script src="/js/nivo-lightbox.js"></script>
 <!-- <script src="js/owl.carousel.js"></script> -->
-<script src="js/jquery.stellar.min.js"></script>    
-<script src="js/jquery.nav.js"></script>    
-<script src="js/scrolling-nav.js"></script>    
+<script src="/js/jquery.stellar.min.js"></script>    
+<script src="/js/jquery.nav.js"></script>    
+<script src="/js/scrolling-nav.js"></script>    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha256-H3cjtrm/ztDeuhCN9I4yh4iN2Ybx/y1RM7rMmAesA0k=" crossorigin="anonymous"></script>
-<script src="js/smoothscroll.js"></script>    
-<script src="js/jquery.slicknav.js"></script>     
-<script src="js/wow.js"></script>   
-<script src="js/jquery.vide.js"></script>
-<script src="js/jquery.counterup.min.js"></script>    
-<script src="js/jquery.magnific-popup.min.js"></script>    
-<script src="js/waypoints.min.js"></script>    
-<script src="js/form-validator.min.js"></script>
-<script src="js/contact-form-script.js"></script>   
-<script src="js/main.js"></script>
+<script src="/js/smoothscroll.js"></script>    
+<script src="/js/jquery.slicknav.js"></script>     
+<script src="/js/wow.js"></script>   
+<script src="/js/jquery.vide.js"></script>
+<script src="/js/jquery.counterup.min.js"></script>    
+<script src="/js/jquery.magnific-popup.min.js"></script>    
+<script src="/js/waypoints.min.js"></script>    
+<script src="/js/form-validator.min.js"></script>
+<script src="/js/contact-form-script.js"></script>   
+<script src="/js/main.js"></script>
