--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -18,21 +18,24 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/line-icons.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/line-icons.css">
 <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
 
-<link rel="stylesheet" href="css/nivo-lightbox.css">
-<link rel="stylesheet" href="css/magnific-popup.css">
-<link rel="stylesheet" href="css/slicknav.css">
-<link rel="stylesheet" href="css/animate.css">
-<link rel="stylesheet" href="css/main.css">    
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="/css/nivo-lightbox.css">
+<link rel="stylesheet" href="/css/magnific-popup.css">
+<link rel="stylesheet" href="/css/slicknav.css">
+<link rel="stylesheet" href="/css/animate.css">
+<link rel="stylesheet" href="/css/main.css">    
+<link rel="stylesheet" href="/css/responsive.css">
 <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 <style>
   .info-text { color: white; }
+  nav.navbar {
+    padding: 0;
+  }
   .navbar-header {
-    height: 75px;
+    height: 100px;
   }
   .navbar-brand img {
     width: 120px;
